--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,6 +5,8 @@
   --button-color: #ff0070;
   --section-header-color: #ff0070;
   --accent-color: #ff0070;
+  --button-hover-border: #ff007066;
+  --article-header-color: #000028;
   --bg-image: url("../images/cover-image-dark.png");
   --rec-type: block;
 }
@@ -17,6 +19,8 @@
     --button-color: #ff0070;
     --section-header-color: #ff0070;
     --accent-color: #ff0070;
+    --button-hover-border: #ff007066;
+    --article-header-color: #000028;
     --bg-image: url("../images/cover-image-dark.png");
     --rec-type: block;
   }
